# wcps-python-client

./: .buildinfo  .gitignore  README.html  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pylint.sh  pyproject.toml  search.html  searchindex.js  yek.toml
.doctrees/: README.doctree  index.doctree
.doctrees/autoapi/: index.doctree
.doctrees/autoapi/wcps/: index.doctree
.doctrees/autoapi/wcps/model/: index.doctree
.doctrees/autoapi/wcps/service/: index.doctree
.doctrees/autoapi/wcps/spectral/: index.doctree
.github/workflows/: build-and-deploy-docs.yml  release.yml
_modules/: index.html
_modules/wcps/: model.html  service.html  spectral.html
_sources/autoapi/: index.rst.txt
_sources/autoapi/wcps/: index.rst.txt
_sources/autoapi/wcps/model/: index.rst.txt
_sources/autoapi/wcps/service/: index.rst.txt
_sources/autoapi/wcps/spectral/: index.rst.txt
autoapi/: index.html
autoapi/wcps/: index.html
autoapi/wcps/model/: index.html
autoapi/wcps/service/: index.html
autoapi/wcps/spectral/: index.html
docs/: conf.py  index.rst
tests/: test_model.py  test_service.py
wcps/: __init__.py  model.py  service.py  spectral.py
